[metadata]
name = fypro
version = 0
description = Fortran project template generator 
long_desciption = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/aradi/fypro
license = BSD-2-Clause
license_files =
    LICENSE

[options]
packages = find:
package_dir =
    =src
install_requires =
    fypp
python_requires = >=3.6

[options.entry_points]
console_scripts = 
    fypro=fypro.fypro_script:main

[options.packages.find]
where = src
